--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center justify-content-center">
     <div class="container position-relative">
-      <h1>Welcome to BSS Group</h1>
-      <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam sed quis accusamus. Aspernatur nesciunt totam
-        ipsum eligendi, necessitatibus molestiae tempore.
+      <h1>PT BINTANG SRIWIJAYA SERVICE</h1>
+      <h2>Practice Your Skills With Us To Join The Best Company
       </h2>
       <a href="#about" class="btn-get-started scrollto">Join Sekarang !</a>
     </div>
@@ -97,24 +96,28 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about.jpg" class="img-fluid" alt="foto Perusahaan">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>PT. BINTANG SRIWIJAYA SERVICE</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Duis aute irure dolor in reprehenderit
+            <p style="text-align: justify;">
+              PT. Bintang Sriwijaya Service merupakan penyelenggaraan training dan pelatihan yang didirikan dengan
+              tujuan untuk turut berkontribusi meningkatkan kualitas sumber daya manusia khususnya di bidang industri,
+              pemerintahan, perbankan maupun institusi lainnya agar mampu membawa perubahan yang signifikan kearah
+              kemajuan dengan memiliki keunggulan kompetitif agar tercapai performa kerja yang unggul dan optimal.
             </p>
             <div class="row">
               <div class="col-md-6">
                 <i class="bx bx-receipt"></i>
-                <h4>Corporis voluptates sit</h4>
-                <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                <h4>Provider Terpercaya</h4>
+                <p style="text-align: justify;">Layanan kami telah membantu lebih dari 4000 peserta untuk meningkatkan
+                  skill mereka.</p>
               </div>
               <div class="col-md-6">
                 <i class="bx bx-cube-alt"></i>
-                <h4>Ullamco laboris nisi</h4>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <h4>Pelatihan Berkualitas</h4>
+                <p style="text-align: justify;">Pelatihan dikemas dengan materi terupdate yang dilandasi pengalaman dan
+                  praktek nyata di lapangan</p>
               </div>
             </div>
           </div>
@@ -130,13 +133,13 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="542" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Clients</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="243" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Projects</p>
           </div>
@@ -148,7 +151,7 @@
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="75" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Hard Workers</p>
           </div>
@@ -164,9 +167,9 @@
 
         <div class="section-title">
           <h2>Jasa</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+            in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -177,7 +180,9 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">Pelatihan Menjahit</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p style="text-align: justify;">Setelah mengikuti pelatihan menjahit peserta, mampu membuat pakaian
+                menggunakan mesin, mampu mengukur badan customer, membuat pola, menggunting kain, dan menjahit sesuai
+                SOP.</p>
             </div>
           </div>
 
@@ -188,7 +193,9 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Pelatihan Asembling</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p style="text-align: justify;">Pelatihan ini akan memberikan pengalaman tentang metode - metode yang
+                dapat digunakan dalam proses desain produk serta dalam proses perakitan sehingga akan menghasilkan
+                efisiensi bagi perusahaan</p>
             </div>
           </div>
 
@@ -196,10 +203,11 @@
             data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
-                <i class="bx bx-tachometer"></i>
+                <i class="bx bx-cut"></i>
               </div>
               <h4><a href="">Pelatihan Cutting</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p style="text-align: justify;">Dalam pelatihan ini peserta akan di bimbing bagaimana cara cutting
+                (menggunting) produk dengan baik, meminimalisir kesalahan dalam menjahit</p>
             </div>
           </div>
 
@@ -209,7 +217,8 @@
                 <i class="bx bx-layer"></i>
               </div>
               <h4><a href="">Operator Asembling</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <p style="text-align: justify;">Operator Assembling adalah orang yang bertugas dibagian assembling. Dalam
+                pelatihan ini peserta diajarkan bagaimana menjadi operator assembling dengan baik</p>
             </div>
           </div>
 
@@ -219,17 +228,23 @@
                 <i class="bx bx-slideshow"></i>
               </div>
               <h4><a href="">Pelatihan QC</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <p style="text-align: justify;">Training Quality - merupakan training yang bersifat awareness dimana di
+                dalam training ini peserta akan mendapatkan pengetahuan dasar atau pengenalan tentang teknik atau sistem
+                manajemen quality control pada suatu perusahaan agar peserta lebih siap dan mampu saat memasuki dunia
+                kerja di bidang yang berkaitan dengan quality control pada suatau perusahaan</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-teal">
               <div class="icon">
-                <i class="bx bx-arch"></i>
+                <i class="bx bx-user"></i>
               </div>
               <h4><a href="">Staff</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <p style="text-align: justify;">Tujuan pelatihan ini adalah untuk meningkatkan produktivitas, kualitas,
+                mendukung perencanaan SDM, meningkatkan moral anggota, memberikan kompensasi yang tidak langsung,
+                meningkatkan kesehatan dan keselamatan kerja, mencegah kedaluwarsa kemampuan dan pengetahuan personel,
+                meningkatkan perkembangan kemampuan dan keahlian personel</p>
             </div>
           </div>
 
@@ -367,9 +382,9 @@
 
         <div class="section-title">
           <h2>Pendiri</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+            in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row justify-content-center">
@@ -395,7 +410,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/Pak-jaenal.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -413,7 +428,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/pak-ipan.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -448,10 +463,9 @@
 
           <div class="section-title mt-5">
             <h2>Anggota Staff</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-              consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat
-              sit
-              in iste officiis commodi quidem hic quas.</p>
+            <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+              consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+              in iste officiis commodi quidem hic quas.</p> -->
           </div>
 
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
@@ -538,7 +552,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>RAHAJENG ARGANINGGAR</h4>
+                <h4>RAHAJENG ARGANINGGAR</h4><br>
                 <span>STAFF ADMINISTRASI</span>
               </div>
             </div>
@@ -556,9 +570,9 @@
 
         <div class="section-title">
           <h2>Pricing</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+            in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row justify-content-center">
@@ -720,74 +734,56 @@
 
         <div class="section-title">
           <h2>Pertanyaan terkait</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+            in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse"
-                data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i
+                data-bs-target="#faq-list-1">Mengapa harus di PT Bintang Sriwijaya Service?<i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                  gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  Kami memberikan pelatihan terbaik dan termurah se Indonesia. Layanan kami telah membantu lebih dari
+                  4000 peserta untuk meningkatkan skill mereka.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2"
-                class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i
+                class="collapsed">Bagaimana cara mendaftar untuk mengikuti program pelatihan? <i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                  donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit
-                  ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  Rekan bisa langsung mengunjungi website kami, isi formulir khususnya program latihan yang rekan ingin
+                  ikuti kemudian contact email perusahaan.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3"
-                class="collapsed">Dolor sit amet consectetur adipiscing elit? <i
+                class="collapsed">Kapan saya mulai program pelatihan setelah mengisi formulir Pendaftaran? <i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum
-                  integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt.
-                  Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi
-                  quis
+                  Perusahaan akan memberikan informasi melalui gmail / whatsapp terkait jadwal pembelajaran.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4"
-                class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i
+                class="collapsed">Apa saja yang saya dapatkan setelah mengikuti program ini? <i
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc
-                  vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus
-                  gravida quis blandit turpis cursus in.
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5"
-                class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem
-                dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada
-                  nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis
-                  tellus in metus vulputate eu scelerisque.
+                  Mendapatkan pengalaman khususnya di bidang yang rekan ikuti serta mendapat sertifikat yang dapat
+                  digunakan untuk melamar di perusahaan.
                 </p>
               </div>
             </li>
@@ -804,9 +800,9 @@
 
         <div class="section-title">
           <h2>Kontak Kami</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
             consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+            in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -832,7 +828,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>+6285777218271<br>+6285717524173<br>+6282115105406</p>
+                  <p>(+62) 85777218271<br>(+62) 85717524173<br>(+62) 82115105406</p>
                 </div>
               </div>
             </div>
@@ -913,8 +909,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Join Our Program</h4>
+            <p>Bergabung dan raih kesempatan untuk menjadi bagian dari tenaga kerja yang memiliki kualitas SDM dengan
+              baik ! </p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -943,8 +940,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="https://api.whatsapp.com/send?phone=6282115105406&text="
+    class="back-to-top d-flex align-items-center justify-content-center"><i class="bx bxl-whatsapp"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
