--- a/inner-page.html
+++ b/inner-page.html
@@ -98,7 +98,6 @@
             <!-- <h2 class="fw-bold">List Anggota</h2> -->
           </div>
         </div>
-        <hr>
         <div class="row justify-content-center mt-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
@@ -122,7 +121,7 @@
 
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
-              <img src="assets/img/team/team-3.jpg" alt="" class="w-100 h-100">
+              <img src="assets/img/team/Pak-jaenal.jpeg" alt="" class="w-100 h-100">
             </div>
           </div>
           <div class="col-md-7 offset-md-1">
@@ -142,7 +141,7 @@
 
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
-              <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
+              <img src="assets/img/team/pak-ipan.jpeg" alt="" class="w-100 h-100">
             </div>
           </div>
           <div class="col-md-7 offset-md-1">
