modified section keanggotaan

--- a/inner-page.html
+++ b/inner-page.html
@@ -43,14 +43,14 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html">Beranda</a></li>
-          <li><a class="nav-link scrollto" href="index.html">Tentang Kami</a></li>
-          <li><a class="nav-link scrollto" href="index.html">Jasa</a></li>
+          <li><a class="nav-link scrollto" href="index.html#hero">Beranda</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">Tentang Kami</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Jasa</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
-          <li><a class="nav-link scrollto" href="index.html">Pendiri</a></li>
-          <li><a class="nav-link scrollto" href="index.html">Pricing</a></li>
-          <li><a class="nav-link scrollto active" href="inner-page.html">Keanggotaan</a></li>
-          <li class="dropdown"><a href="#"><span>Berita dan Artikel</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="index.html#team">Pendiri</a></li>
+          <li><a class="nav-link scrollto" href="index.html#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto active" href="inner-page.html#contact">Keanggotaan</a></li>
+          <li class="dropdown"><a href="#"><span>Berita dan Artikel</span><i class="bi bi-chevron-down"></i></a>
             <ul>
               <!-- <li><a href="#">Berita dan Artikel</a></li>
               <li class="dropdown"><a href="#"><span>Berita dan Artikel</span> <i class="bi bi-chevron-right"></i></a> -->
@@ -82,9 +82,9 @@
     <section class="breadcrumbs">
       <div class="container">
 
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Daftar Keanggotaan BSS Group</h2>
-          <ol>
+        <div class="d-flex justify-content-between mt-3 align-items-center">
+          <h2 class="fw-bold ms-5 ms-md-0">Daftar Keanggotaan BSS Group</h2>
+          <ol class="ms-5 ms-md-0">
             <li><a href="index.html">Home</a></li>
             <li>Keanggotaan</li>
           </ol>
@@ -94,11 +94,11 @@
     <div class="container">
       <div class="section-list-anggota">
         <div class="row">
-          <div class="col-12 mt-3">
+          <div class="col-12 mt-2">
             <!-- <h2 class="fw-bold">List Anggota</h2> -->
           </div>
         </div>
-        <div class="row justify-content-center mt-3">
+        <div class="row justify-content-center mx-2 mt-3 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
@@ -117,8 +117,10 @@
               </div>
             </div>
           </div>
-          <hr>
+        </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
 
+        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/Pak-jaenal.jpeg" alt="" class="w-100 h-100">
@@ -137,8 +139,10 @@
               </div>
             </div>
           </div>
-          <hr>
+        </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
 
+        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/pak-ipan.jpeg" alt="" class="w-100 h-100">
@@ -159,8 +163,10 @@
               </div>
             </div>
           </div>
-          <hr>
+        </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
 
+        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-2.jpg" alt="" class="w-100 h-100">
@@ -181,8 +187,10 @@
               </div>
             </div>
           </div>
-          <hr>
+        </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
 
+        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
@@ -203,8 +211,10 @@
               </div>
             </div>
           </div>
-          <hr>
+        </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
 
+        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-3.jpg" alt="" class="w-100 h-100">
@@ -225,8 +235,10 @@
               </div>
             </div>
           </div>
-          <hr>
+        </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
 
+        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-4.jpg" alt="" class="w-100 h-100">
@@ -247,8 +259,10 @@
               </div>
             </div>
           </div>
-          <hr>
+        </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
 
+        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
@@ -269,8 +283,10 @@
               </div>
             </div>
           </div>
-          <hr>
+        </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
 
+        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-2.jpg" alt="" class="w-100 h-100">
@@ -291,10 +307,8 @@
               </div>
             </div>
           </div>
-          <hr>
-
-
         </div>
+        <div class="garis-anggota mx-auto mt-5"></div>
       </div>
     </div>
 
