--- a/inner-page.html
+++ b/inner-page.html
@@ -67,7 +67,7 @@
           <li><a href="#">Liputan Media</a></li>
         </ul>
         </li>
-        <li><a class="nav-link scrollto" href="#contact">Kontak Kami</a></li>
+        <li><a class="nav-link scrollto" href="index.html#contact">Kontak Kami</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -90,6 +90,7 @@
           </ol>
         </div>
       </div>
+      
     </section><!-- End Breadcrumbs -->
     <div class="container">
       <div class="section-list-anggota">
