--- a/index.html
+++ b/index.html
@@ -835,9 +835,9 @@
 
           </div>
 
-          <!-- action="https://formsubmit.co/Muhammadrenaldi687@gmail.com" method="POST" -->
+          <!-- action="https://formsubmit.co/@gmail.com" method="POST" -->
           <div class="col-lg-6">
-            <form action="https://formsubmit.co/Muhammadrenaldi687@gmail.com" method="POST">
+            <form action="https://formsubmit.co/bintangsriwijayaservice@gmail.com" method="POST">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
