--- a/inner-page.html
+++ b/inner-page.html
@@ -43,14 +43,14 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html#hero">Beranda</a></li>
-          <li><a class="nav-link scrollto" href="index.html#about">Tentang Kami</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Jasa</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Beranda</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Tentang Kami</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Jasa</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
-          <li><a class="nav-link scrollto" href="index.html#team">Pendiri</a></li>
-          <li><a class="nav-link scrollto" href="index.html#pricing">Pricing</a></li>
-          <li><a class="nav-link scrollto active" href="inner-page.html#contact">Keanggotaan</a></li>
-          <li class="dropdown"><a href="#"><span>Berita dan Artikel</span><i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="#team">Pendiri</a></li>
+          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto active" href="inner-page.html">Keanggotaan</a></li>
+          <li class="dropdown"><a href="#"><span>Berita dan Artikel</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <!-- <li><a href="#">Berita dan Artikel</a></li>
               <li class="dropdown"><a href="#"><span>Berita dan Artikel</span> <i class="bi bi-chevron-right"></i></a> -->
@@ -67,7 +67,7 @@
           <li><a href="#">Liputan Media</a></li>
         </ul>
         </li>
-        <li><a class="nav-link scrollto" href="index.html#contact">Kontak Kami</a></li>
+        <li><a class="nav-link scrollto" href="#contact">Kontak Kami</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -82,24 +82,23 @@
     <section class="breadcrumbs">
       <div class="container">
 
-        <div class="d-flex justify-content-between mt-3 align-items-center">
-          <h2 class="fw-bold ms-5 ms-md-0">Daftar Keanggotaan BSS Group</h2>
-          <ol class="ms-5 ms-md-0">
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Daftar Keanggotaan BSS Group</h2>
+          <ol>
             <li><a href="index.html">Home</a></li>
             <li>Keanggotaan</li>
           </ol>
         </div>
       </div>
-      
     </section><!-- End Breadcrumbs -->
     <div class="container">
       <div class="section-list-anggota">
         <div class="row">
-          <div class="col-12 mt-2">
+          <div class="col-12 mt-3">
             <!-- <h2 class="fw-bold">List Anggota</h2> -->
           </div>
         </div>
-        <div class="row justify-content-center mx-2 mt-3 p-4 row-list-anggota rounded-3">
+        <div class="row justify-content-center mt-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
@@ -118,13 +117,11 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
+          <hr>
 
-        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
-              <img src="assets/img/team/Pak-jaenal.jpeg" alt="" class="w-100 h-100">
+              <img src="assets/img/team/team-3.jpg" alt="" class="w-100 h-100">
             </div>
           </div>
           <div class="col-md-7 offset-md-1">
@@ -140,13 +137,11 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
+          <hr>
 
-        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
-              <img src="assets/img/team/pak-ipan.jpeg" alt="" class="w-100 h-100">
+              <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
             </div>
           </div>
           <div class="col-md-7 offset-md-1">
@@ -164,10 +159,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
+          <hr>
 
-        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-2.jpg" alt="" class="w-100 h-100">
@@ -188,10 +181,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
+          <hr>
 
-        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
@@ -212,10 +203,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
+          <hr>
 
-        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-3.jpg" alt="" class="w-100 h-100">
@@ -236,10 +225,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
+          <hr>
 
-        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-4.jpg" alt="" class="w-100 h-100">
@@ -260,10 +247,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
+          <hr>
 
-        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
@@ -284,10 +269,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
+          <hr>
 
-        <div class="row justify-content-center mt-5 mx-2 p-4 row-list-anggota rounded-3">
           <div class="col-md-4 mb-3">
             <div class="img-team overflow-hidden rounded-3">
               <img src="assets/img/team/team-2.jpg" alt="" class="w-100 h-100">
@@ -308,8 +291,10 @@
               </div>
             </div>
           </div>
+          <hr>
+
+
         </div>
-        <div class="garis-anggota mx-auto mt-5"></div>
       </div>
     </div>
 
