--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 
 <head>
   <meta charset="utf-8">
@@ -151,7 +151,7 @@
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="75" data-purecounter-duration="1"
+            <span data-purecounter-start="0" data-purecounter-end="45" data-purecounter-duration="1"
               class="purecounter"></span>
             <p>Hard Workers</p>
           </div>
@@ -392,7 +392,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/pak-komandan.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -590,7 +590,7 @@
                 <li class="na">Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Beli Sekarang</a>
+                <a href="portfolio-details.html" class="btn-buy">Beli Sekarang</a>
               </div>
             </div>
           </div>
@@ -853,9 +853,9 @@
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="my-3">
-                <!-- <div class="loading">Loading</div>
+                <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div> -->
+                <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center">
                 <button type="submit" class="send-message btn">Send Message</button>
