--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,16 +5,17 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Baker Bootstrap Template</title>
+  <title>BSS Group Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logoBSStransparant.png" rel="icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,18 +26,73 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Baker - v4.7.0
-  * Template URL: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+</head>
 </head>
 
 <body>
 
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"> <img src="assets/img/logoBSStransparant.png" alt="" width="50" height="50" class="me-3"><a
+          href="index.html"><span class="B-title">B</span><span class="S-title">S</span><span class="S2-title">S</span>
+          Group</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto" href="index.html">Beranda</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Tentang Kami</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Jasa</a></li>
+          <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
+          <li><a class="nav-link scrollto" href="#team">Pendiri</a></li>
+          <li><a class="nav-link scrollto active" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="inner-page.html">Keanggotaan</a></li>
+          <li class="dropdown"><a href="#"><span>Berita dan Artikel</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <!-- <li><a href="#">Berita dan Artikel</a></li>
+              <li class="dropdown"><a href="#"><span>Berita dan Artikel</span> <i class="bi bi-chevron-right"></i></a> -->
+              <!-- <ul>
+                  <li><a href="#">Kegiatan BSS</a></li>
+                  <li><a href="#">Artikel Umum</a></li>
+                  <li><a href="#">Profil Perusahaan</a></li>
+                  <li><a href="#">Liputan Media</a></li>
+                </ul> -->
+          </li>
+          <li><a href="#">Kegiatan BSS</a></li>
+          <li><a href="#">Artikel Umum</a></li>
+          <li><a href="#">Profil Perusahaan</a></li>
+          <li><a href="#">Liputan Media</a></li>
+        </ul>
+        </li>
+        <li><a class="nav-link scrollto" href="#contact">Kontak Kami</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
+
+
   <main id="main">
+
+    <!-- ======= Breadcrumbs ======= -->
+    <section class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Pelatihan Menjahit</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Pricing</a></li>
+            <li>Pelatihan Menjahit</li>
+          </ol>
+        </div>
+      </div>
+    </section><!-- End Breadcrumbs -->
+
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
@@ -49,15 +105,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/pelatihan-menjahit.jpeg" alt="" class="w-100 h-100">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/pelatihan-menjahit-2.jpeg" alt="" class="w-100 h-100">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/pelatihan-menjahit-3.jpeg" alt="" class="w-100 h-100">
                 </div>
 
               </div>
@@ -67,30 +123,113 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Pelatihan Menjahit</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Pelatihan Menjahit</li>
+                <li><strong>Project date</strong>: 28 Mei 2022 </li>
+                <li><strong>Jam Program</strong>: 4x Pertemuan</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              <h2>Pelatihan Menjahit</h2>
+              <p style="text-align: justify;">
+                Setelah mengikuti pelatihan menjahit peserta, mampu membuat pakaian menggunakan mesin, mampu mengukur
+                badan customer, membuat pola, menggunting kain, dan menjahit sesuai SOP.
               </p>
+
+              <section class="pricing">
+                <div class="box featured">
+
+                  <a href="#" class="btn-buy">Daftar Sekarang</a>
+
+                </div>
+              </section>
             </div>
           </div>
-
         </div>
+
+      </div>
 
       </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h3>BSS Group</h3>
+            <p>
+              JL. Pasar Kemis<br>
+              Kp.Waru RT 04/04<br>
+              Desa Sukaharja <br><br>
+              <strong>Phone:</strong> +6282115105406<br>
+              <strong>Email:</strong> bintangsriwijayaservice@gmail.com<br>
+            </p>
+          </div>
+
+          <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Jasa</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Our Services</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pelatihan Menjahit</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pelatihan Asembling</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pelatihan Cutting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Operator Asembling</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pelatihan QC</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Staff</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-4 col-md-6 footer-newsletter">
+            <h4>Join Our Program</h4>
+            <p>Bergabung dan raih kesempatan untuk menjadi bagian dari tenaga kerja yang memiliki kualitas SDM dengan
+              baik ! </p>
+            <form action="" method="post">
+              <input type="email" name="email"><input type="submit" value="Subscribe">
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container d-md-flex py-4">
+
+      <div class="me-md-auto text-center text-md-start">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Bss Group</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">Designed by <a href="index.html">BSS Founder</a>
+        </div>
+      </div>
+      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
